--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -16,17 +16,23 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: nkodenko/ods-acd-tg-bot
-          tags:
-            type=raw,value=latest,enable=true
-      - name: Build and push Docker image
+      # - name: Extract metadata (tags, labels) for Docker
+      #   id: meta
+      #   uses: docker/metadata-action@v4
+      #   with:
+      #     images: nkodenko/ods-acd-tg-bot
+      #     tags:
+      #       type=raw,value=latest,enable=true
+      - name: Build and push tg-bot Docker image
         uses: docker/build-push-action@v2
         with:
           context: serverapp/tg-bot
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: nkodenko/ods-acd-tg-bot:latest
+      - name: Build and push predictor Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: serverapp/predictor
+          push: true
+          tags: nkodenko/ods-acd-predictor:latest
+
