--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -2,9 +2,7 @@ name: Build Docker images
 on:
   push:
     branches:
-      - master
-      # TODO: rm after testing
-      - ci-cd-tg-bot-img
+      - main
 jobs:
   push_to_registry:
     runs-on: ubuntu-latest
@@ -16,13 +14,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      # - name: Extract metadata (tags, labels) for Docker
-      #   id: meta
-      #   uses: docker/metadata-action@v4
-      #   with:
-      #     images: nkodenko/ods-acd-tg-bot
-      #     tags:
-      #       type=raw,value=latest,enable=true
       - name: Build and push tg-bot Docker image
         uses: docker/build-push-action@v2
         with:
